# discord_bot

./: .dockerignore  .gitignore  Dockerfile  LICENSE  UPDATES.md  __main__.py  docker-compose.yaml  logger.json  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: cd-deploy-prod.yaml  ci-lint-python.yaml  ci-test-python.yaml
k8s/: discord-bot-deploy.yaml  discord-bot-service.yaml
src/: config.py
src/cogs/: greetings.py
src/utils/: json_formatter.py  queue_handler.py  translation.py
